--- a/style.css
+++ b/style.css
@@ -1,3 +1,71 @@
 body {
-    background-color:  #ece9e5 ;
+    background-color: #eeedec;
+    font-family: monospace;
+}
+
+    
+nav {
+
+    color: #fffdfdee;
+
+
+}
+img {
+    display: flex;
+   justify-content: left; 
+  
+}
+
+nav ul {
+    display: flex;
+    background-color: #ffffff;
+    justify-content: right;
+    border-radius: 10px;
+    height: 100px;
+    
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+nav ul li {
+    display: inline-block;
+
+}
+
+nav ul li a {
+    color: #f8f2f2;
+    text-decoration: none;
+
+
+
+
+
+}
+
+nav ul button {
+    margin: 10px;
+    margin-right: 40px;
+    margin-top: 30px;
+    background-color: #5E3719;
+    border: none;
+    height: 40px;
+    width: 120px;
+    border-radius: 10px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+.product-box-main {
+    display: flex;
+}
+.product-box-child {
+box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+border-radius:25px ;
+    height: 60dvh;
+    background-color: #ffffff;
+    width: 700px;
+    margin: 20px;
+}
+.product-box-child-small {
+     height: 37dvh;
+     background-color: #5E3719;
+     border-radius:25px ;
+     margin-top: 220px;
 }
